spacing issues resolved comment sections

--- a/src/Component/Create-Comment/create-comment.css
+++ b/src/Component/Create-Comment/create-comment.css
@@ -1,11 +1,18 @@
-
-
-
-input{
-    
-    max-width: 774px;
-    min-width: 774px;
-    max-height: 114px;
-    min-height: 50px;
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
 }
 
+input {
+  max-width: 774px;
+  min-width: 774px;
+  max-height: 114px;
+  min-height: 50px;
+}
+
+.create-comment-title {
+  margin-bottom: 0px;
+}
