--- a/src/Component/Forum/forum.css
+++ b/src/Component/Forum/forum.css
@@ -13,7 +13,6 @@
 }
 .container-all {
   width: 100%;
-  max-width: 900px;
   height: 100%;
   align-items: center;
 }
